# Sample-Rust-API-V1

./: README.md  samconfig.toml
rust_api/: template.yaml
rust_api/rust_app/src/: main.rs
rust_app/: Cargo.toml
