[package]
name = "sample_6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.1"
aws-sdk-dynamodb = "1.9.0"
aws-sdk-firehose = "1.9.0"
aws-smithy-types = "1.1.1"
lambda_http = "0.9.0"

lambda_runtime = "0.6.0"
serde = "1.0.136"
serde_json = "1.0.111"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
